[tool.poetry]
name = "repl_python3_Caxy-waifu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.2.4"
pipenv = "^2021.5.29"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
bs4 = "^0.0.1"
discord-buttons-plugin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
